# Alchemy

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Examples/: 01 Gabber Rave.alchemy  02 Ambient Branches.alchemy  03 Neon Autobahn.alchemy  03 Polyrhythm Lab.alchemy
Packaging/: DEPENDENCIES.md
Source/: Main.cpp
Source/Gui/: Main.cpp
Source/WeldChucK/: ChucKScoreScript.cpp  ChucKScoreScript.h  EmbeddedChucKEngine.cpp  EmbeddedChucKEngine.h  EmbeddedLanguageEngine.cpp  EmbeddedLanguageEngine.h  EmbeddedPerformanceEngine.cpp  EmbeddedPerformanceEngine.h  WeldChucKEngine.h
Tests/: EngineBoundaryTest.cpp
scripts/: build_windows_nmake.cmd  configure_windows_nmake.cmd  package_macos_release.sh
